--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>hii</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda exercitationem unde eaque est voluptates magnam laborum officiis, cum repudiandae debitis.</p>
+    <h1>hi</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, quisquam!</p>
 </body>
 </html>
